--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "*", features = ["full"] }
+
+[lib]
+name = "sockparse"
+path = "src/sockparse.rs"    
