--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2021"
 [dependencies]
 tokio = { version = "*", features = ["full"] }
 ipnetwork = "*"
+itertools = "*"
+futures = "*"
 
 [lib]
 name = "sockparse"
-path = "src/sockparse.rs"    
+path = "src/sockparse.rs"
