--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,29 @@
 [package]
-name = "IPcow"
+name = "ipcow" 
 version = "0.1.0"
 edition = "2021"
+
+[lib]
+name = "ipcow"
+path = "src/lib.rs"
+
+[[bin]]
+name = "ipcow"
+path = "src/main.rs"
 
 [dependencies]
 tokio = { version = "*", features = ["full"] }
 ipnetwork = "*"
 itertools = "*"
 futures = "*"
+serde = { version = "1.0", features = ["derive"] }
 
 
-[lib]
-name = "sockparse"
-path = "src/sockparse.rs"
+[dev-dependencies]
+criterion = { version = "0.5", features = ["async_tokio"] }
+tokio-test = "*"
+async-std = { version = "1.0", features = ["attributes"] }
+
+[[bench]]
+name = "port_scanner_bench"
+harness = false
