--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,14 @@ name = "ipcow"
 path = "src/main.rs"
 
 [dependencies]
+chrono = "*"
 tokio = { version = "*", features = ["full"] }
 ipnetwork = "*"
 itertools = "*"
 futures = "*"
 serde = { version = "1.0", features = ["derive"] }
 sysinfo = "*"
-
+warp = "*"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
