--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ ipnetwork = "*"
 itertools = "*"
 futures = "*"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"  # Add this line
 sysinfo = "*"
 warp = "*"
 
