--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"  # Add this line
 sysinfo = "*"
 warp = "*"
+rayon = "1.8"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
