--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde_json = "1.0"  # Add this line
 sysinfo = "*"
 warp = "*"
 rayon = "1.8"
-
+clap = { version = "4.4", features = ["derive"] }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
