--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ sysinfo = "*"
 warp = "*"
 rayon = "1.8"
 clap = { version = "4.4", features = ["derive"] }
+terminal_size = "*"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
