--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,9 @@ warp = "*"
 rayon = "1.8"
 clap = { version = "4.4", features = ["derive"] }
 terminal_size = "*"
+nalgebra = "*"
+rand = "*"
+ctrlc = "*"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
